--- a/src/LoggingDemo/LoggingDemo.csproj
+++ b/src/LoggingDemo/LoggingDemo.csproj
@@ -10,6 +10,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="SeriLog.AspNetCore" Version="2.1.1" />
+    <PackageReference Include="SeriLog.Sinks.Console" Version="3.1.1" />
   </ItemGroup>
 
 </Project>
