Simple Configuration via settings

--- a/src/LoggingDemo/appsettings.json
+++ b/src/LoggingDemo/appsettings.json
@@ -2,5 +2,14 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-VG6022M\\SQLEXPRESS2017;Database=aspnet-LoggingDemo;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    }
+  },
   "AllowedHosts": "*"
 }
