--- a/src/LoggingDemo/LoggingDemo.csproj
+++ b/src/LoggingDemo/LoggingDemo.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="SeriLog.AspNetCore" Version="2.1.1" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.0.1" />
     <PackageReference Include="SeriLog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="SeriLog.Sinks.File" Version="4.0.0" />
   </ItemGroup>
 
 </Project>
