--- a/src/LoggingDemo/appsettings.json
+++ b/src/LoggingDemo/appsettings.json
@@ -8,7 +8,9 @@
       "Default": "Debug",
       "Override": {
         "Microsoft": "Warning",
-        "System": "Warning"
+        "System": "Warning",
+        "Microsoft.EntityFrameworkCore": "Information", 
+        "Microsoft.EntityFrameworkCore.Database.Command": "Information"
       }
     },
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
@@ -16,7 +18,7 @@
       { "Name": "Console" },
       {
         "Name": "File",
-        "Args": { "path": "Logs\\MyLog.txt", "restrictedToMinimumLevel": "Error"  }
+        "Args": { "path": "Logs\\MyLog.txt", "restrictedToMinimumLevel": "Information"  }
       }
     ]
   },
