Updated presentation and added correlation id

--- a/src/LoggingDemo/appsettings.json
+++ b/src/LoggingDemo/appsettings.json
@@ -7,18 +7,21 @@
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
-        "Microsoft": "Warning",
+        "Microsoft": "Information",
         "System": "Warning",
-        "Microsoft.EntityFrameworkCore": "Information", 
         "Microsoft.EntityFrameworkCore.Database.Command": "Information"
       }
     },
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId", "WithCorrelationId" ],
     "WriteTo": [
       { "Name": "Console" },
       {
         "Name": "File",
-        "Args": { "path": "Logs\\MyLog.txt", "restrictedToMinimumLevel": "Information"  }
+        "Args": {
+          "path": "Logs\\MyLog.txt",
+          "restrictedToMinimumLevel": "Information",
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {CorrelationId} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
       }
     ]
   },
