Updated Logging Information

--- a/src/LoggingDemo/appsettings.json
+++ b/src/LoggingDemo/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-VG6022M\\SQLEXPRESS2017;Database=aspnet-LoggingDemo;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=aspnet-LoggingDemo;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
@@ -20,7 +20,7 @@
         "Args": {
           "path": "Logs\\MyLog.txt",
           "restrictedToMinimumLevel": "Information",
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {CorrelationId} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {CorrelationId} {Level:u3}] {Message:lj} {RequestUser} {NewLine}{Exception}"
         }
       }
     ]
