--- a/src/LoggingDemo/appsettings.json
+++ b/src/LoggingDemo/appsettings.json
@@ -7,7 +7,7 @@
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
-        "Microsoft": "Information",
+        "Microsoft": "Warning",
         "System": "Warning",
         "Microsoft.EntityFrameworkCore.Database.Command": "Information"
       }
